findByName method added